한슬이형 병합버전
한슬이형 병합버전

--- a/13.DIGITAL ART(0822)/templates/generic0.html
+++ b/13.DIGITAL ART(0822)/templates/generic0.html
@@ -103,7 +103,7 @@
 				<ul class="links">
 					<li><a href="/style">Style Transfer</a></li>
 					<li><a href="/faceswap">FaceSwap</a></li>
-					<li><a href="/firstodervideo">First Order Motion</a></li>
+					<li><a href="/firstordervideo">First Order Motion</a></li>
 					<li><a href="/about">About Us.</a></li>
 				</ul>
 			</nav>
