--- a/13.DIGITAL ART(0822)/templates/generic1.html
+++ b/13.DIGITAL ART(0822)/templates/generic1.html
@@ -103,7 +103,7 @@
 				<ul class="links">
 					<li><a href="/style">Style Transfer</a></li>
 					<li><a href="/faceswap">FaceSwap</a></li>
-					<li><a href="/firstodervideo">First Order Motion</a></li>
+					<li><a href="/firstordervideo">First Order Motion</a></li>
 					<li><a href="/about">About Us.</a></li>
 				</ul>
 			</nav>
@@ -114,28 +114,55 @@
 			to the full filename of your image. This is used in each section to set
 			the background image.
 		-->
-			<section id="post" class="wrapper bg-img" data-bg="banner4.jpg">
-				<div class="inner" style="width:1600px;">
-					<article class="box">
-						<header>
-							<h2>Driving Video</h2>
-						</header>
-						<div class="content">
-						<video class='video_art' src='../static/img/d_trump_vox/trump.mp4' muted='muted'  autoplay='autoplay' loop='loop' preload='auto' contorls='false'
-						style=" width:400px ! important;
-							height:100%;
-							margin-left: 500px;
-							background-color: white;
-							border:outset;
-							/* transform: perspective(50px) ; */
-							border-radius: 30px;
-							overflow: hidden;
-							" >
-						</div>
-					</article>
-				</div>
+		<section id="post" class="wrapper bg-img" data-bg="banner4.jpg">
+			<div class="inner" style="width:1600px;">
+				<article class="box">
+					<header>
+						<h2>Driving Video</h2>
+					</header>
+					<div class="content">
+					<video class='video_art' src='../static/img/bruce.mp4' muted='muted'  autoplay='autoplay' loop='loop' preload='auto' contorls='false'
+					style=" width:800px ! important;
+						height:100%;
+						margin-left: 300px;
+						background-color: white;
+						border:outset;
+						/* transform: perspective(50px) ; */
+						border-radius: 30px;
+						overflow: hidden;
+						" >
+					</div>
+				</article>
+			</div>
 
-			</section>
+		</section>
+
+
+
+
+
+		<section id="post" class="wrapper bg-img" data-bg="banner4.jpg">
+			<div class="inner" style="width:1600px;">
+				<article class="box">
+					<header>
+						<h2>Driving Video</h2>
+					</header>
+					<div class="content">
+					<video class='video_art' src='../static/img/d_trump_vox/trump.mp4' muted='muted'  autoplay='autoplay' loop='loop' preload='auto' contorls='false'
+					style=" width:400px ! important;
+						height:100%;
+						margin-left: 500px;
+						background-color: white;
+						border:outset;
+						/* transform: perspective(50px) ; */
+						border-radius: 30px;
+						overflow: hidden;
+						" >
+					</div>
+				</article>
+			</div>
+
+		</section>
 
 						<section id="post" class="wrapper bg-img" data-bg="banner4.jpg">
 
