--- a/08.DIGITAL ART(0820)/templates/faceswap.html
+++ b/08.DIGITAL ART(0820)/templates/faceswap.html
@@ -40,7 +40,7 @@
 
 
   <!-- Header -->
-<!-- <div class="container"> -->
+<div class="container">
 <div class="jumbotron text-center" style="background-image: url(static/img/Header6.jpg)">
 <background-img src="{{ url_for ('static', filename='img/Header6.jpg') }}" alt="Image" size="cover">
 <h1 style="color:white">Face Swap</h1>
@@ -71,6 +71,6 @@
       </div>
     </div>
   </div>
-<!-- </div> -->
+</div>
 
 </html>
