--- a/08.DIGITAL ART(0820)/templates/firstordervideo.html
+++ b/08.DIGITAL ART(0820)/templates/firstordervideo.html
@@ -9,11 +9,10 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <style>
     html {
-    background-image:url('../static/img/first_motion_bg3.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-color: white;
     }
     /* .video_art_div{
 
@@ -26,7 +25,7 @@
       float:left;
       border-radius: 20%;
       margin-top: 0px;
-      margin-left: 500px;
+      margin-left: 100px;
     }
     .video_div{
       float:left;
@@ -99,6 +98,7 @@
 
     <!-- Header -->
 
+<div class="container">
   <div class="card card-image" >
   <div class="jumbotron text-center" style="
   background-image: url('../static/img/man-in-the-mirror.jpg');
@@ -158,6 +158,7 @@
     </table>
 
     <script> document.getElementByclass('video_art').play(); </script>
+</div>
 </div>
 
 
