--- a/08.DIGITAL ART(0820)/templates/home.html
+++ b/08.DIGITAL ART(0820)/templates/home.html
@@ -83,7 +83,6 @@
   </style>
 </head>
 <body>
-
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -99,6 +98,7 @@
     </div>
   </nav>
 
+<div calss="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -174,6 +174,7 @@
 							</div>
 						</div>
 					</div>
+        </div>
 
 				</div>
 
